# lilith_cstdlib

./: .gitignore  CMakeLists.txt
include/: Lmemory.h  vector.h
src/: main.c  memory.c  vector.c
